# Security-Analytics

./: .env.template  .gitignore  CLAUDE.md  Dockerfile  README.md  combined-dataset-sample-1000x.parquet  combined-dataset-sample.parquet  combined-dataset-with-reasoning-fast.parquet  combined-dataset-with-reasoning.parquet  config.py  docker-compose.yml  generate_reasoning_fast.py  generate_reasoning_only.py  generate_reasoning_simple.py  ingest_logs.py  main.py  phishing_logs_to_csv.py  pyproject.toml  reasoning_cache_fast.json  reasoning_cache_simple.json  requirements.txt  sample_dataset.py  test_email.txt  upload_csv.py
.claude/: settings.local.json
data/: __init__.py  dataset_loader.py  preprocessor.py
evaluation/: __init__.py  metrics.py
examples/: api_examples.py  sample_emails.txt
inference/: __init__.py  detector.py  siem_integration.py
models/: __init__.py  qwen_model.py  teacher_model.py
monitoring/: prometheus.yml
scripts/: analyze_dataset.py  setup.bat  setup.sh
tests/: conftest.py  test_api.py  test_dataset_loader.py  test_integration.py  test_preprocessor.py
training/: __init__.py  reasoning_distillation.py  trainer.py
utils/: __init__.py  helpers.py
